--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
